--- a/impl/src/main/resources/application.properties
+++ b/impl/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8585
+server.servlet.context-path=/genealogy
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/genealogy
+spring.datasource.username=genealogy
+spring.datasource.password=genealogy
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+spring.jooq.sql-dialect=POSTGRES
