--- a/api/pom.xml
+++ b/api/pom.xml
@@ -56,7 +56,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/openapi.json</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
                             <output>./</output>
                             <generatorName>spring</generatorName>
                             <generateApiDocumentation>false</generateApiDocumentation>
